Fixed some spelling mistakes, adjusted navbar and text to scale better on mobile devices.

--- a/src/FrontPage.css
+++ b/src/FrontPage.css
@@ -13,29 +13,25 @@ body {
   }
 
   p {
-    font-size: 18pt;
+    font-size: 1.5em;
   }
 
 .center-page {
     /*position: relative;*/
     margin: auto;
-    text-align: center;
+    /*text-align: center;*/
     height: 100vh;
     width: 750px;
 }
 
 .nav {
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
 
 .nav-item {
   padding-left: 15px;
   padding-right: 15px;
-}
-
-.nav-link {
-  font-size: 1.5em;
 }
 
 .ico {
@@ -44,28 +40,22 @@ body {
     margin-left: 26px;
     margin-right: 26px;
 }  
-  .footer-row {
-    padding-top: 30px;
-    padding-bottom: 30px;
-  }
 
-  .page-footer {
-    position: relative;
-    margin: auto;
-    text-align: center;
-    /*color: #999;
-    background-color: #f9f9f9;
-    border-top: .05rem solid #e5e5e5;*/
-  }
+.footer-row {
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
 
-  .content-div {
-    /*position: relative;
-    margin-top: 5%;
-    margin-bottom: 5%;
-    height: 100vh;*/
-    margin: auto;
-    width: 90%;
-    padding-left: 5%;
-    padding-right: 5%;
-    padding-bottom: 12%;
-  }
+.page-footer {
+  position: relative;
+  margin: auto;
+  text-align: center;
+}
+
+.content-div {
+  margin: auto;
+  width: 90%;
+  padding-left: 5%;
+  padding-right: 5%;
+  padding-bottom: 12%;
+}
